@@ -6,7 +6,7 @@ Lock=asim-hasim-alpha
 Description=Description of hasim-alpha
 Name=hasim-alpha
 Tag=HEAD
-CSN=CSN-hasim-alpha-202
+CSN=CSN-hasim-alpha-203
 Dependencies=m5/HEAD platforms/HEAD hasim-models/HEAD
 Sourceurl=http://asim.csail.mit.edu/redmine/projects/hasim-alpha/repository/entry/trunk/
 
